added hover effects for complete & delete icons

--- a/styles.css
+++ b/styles.css
@@ -136,3 +136,11 @@ footer .createIcon {
 .disp-ib {
   display: inline-block;
 }
+
+.complete-button:hover {
+    color: green;
+}
+
+.delete-button:hover {
+    color: red;
+}
